--- a/miami2.html
+++ b/miami2.html
@@ -131,9 +131,17 @@ body {
 
     </div>
 
+    <!-- Columna derecha: Información sobre Miami -->
     <div class="w3-col l4">
-      <!-- Vacío como pediste -->
+      <div class="w3-white w3-margin">
+        <img src="imagenes/6543939c3a2fb6d8fed8fef8_65438bd46165a2810bca7159_downtown-miami.webp" alt="Miami" style="width:100%" class="w3-grayscale">
+        <div class="w3-container w3-black">
+          <h4>Sobre Miami</h4>
+          <p>Miami es conocida por su diversidad cultural, música latina, playas icónicas y celebridades que la eligen como su hogar o destino habitual.</p>
+        </div>
+      </div>
     </div>
+
   </div>
 </div>
 
