--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </div>
 
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="secundaria04.html" target="_blank">secundaria</a>
+  <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
   </div>
 </div>
 
