--- a/miami2.html
+++ b/miami2.html
@@ -169,7 +169,7 @@ body {
 
   </div>
 </div>
-<div <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla </a>
-</div>
+<div 
+</div> <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
 </body>
 </html>
