--- a/index.html
+++ b/index.html
@@ -10,40 +10,69 @@
     body, h1, h2, h3, p {
       font-family: "Raleway", sans-serif;
       color: white;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.7); /* Sombras en los textos */
     }
+
     body, html {
       height: 100%;
       margin: 0;
     }
+
     .bgimg {
       background-image: url('https://cdn.artphotolimited.com/images/62cfed37bd40b8b711cc54f1/1000x1000/miami.jpg');
       min-height: 100%;
       background-position: center;
       background-size: cover;
+      position: relative;
     }
+
+    /* Capa oscura encima del fondo */
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
+      z-index: 1;
+    }
+
     .seccion {
       display: none;
       padding: 4em;
       background-color: rgba(0, 0, 0, 0.8);
       color: white;
     }
+
     .visible {
       display: block;
+      animation: fadeIn 0.7s ease-in;
     }
+
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
     .item img {
       cursor: pointer;
       transition: transform 0.3s;
       border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.4); /* Sombra en las imágenes */
     }
+
     .item img:hover {
       transform: scale(1.05);
     }
+
     .volver {
       margin-top: 2em;
     }
+
     .w3-card-4 {
       background-color: rgba(0, 0, 0, 0.8) !important;
     }
+
     .w3-text-white h1, .w3-text-white h2, .w3-text-white h3, .w3-text-white p {
       color: white;
     }
@@ -52,11 +81,14 @@
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+  <!-- Capa oscura -->
+  <div class="overlay"></div>
+
+  <div class="w3-display-topleft w3-padding-large w3-xlarge" style="position: relative; z-index: 2;">
     <a href="miami2.html" target="_blank">Fama Miami</a>
   </div>
 
-  <div class="w3-display-middle">
+  <div class="w3-display-middle" style="position: relative; z-index: 2;">
     <div id="inicio" class="visible w3-center">
       <h1 class="w3-jumbo w3-animate-top">MIAMI CITY</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
@@ -108,8 +140,8 @@
     </div>
   </div>
 
-  <div class="w3-display-bottomleft w3-padding-large">
-  <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
+  <div class="w3-display-bottomleft w3-padding-large" style="position: relative; z-index: 2;">
+    <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
   </div>
 </div>
 
