--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     body, h1, h2, h3, p {
       font-family: "Raleway", sans-serif;
       color: white;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
     }
-
     body, html {
       height: 100%;
       margin: 0;
     }
-
     .bgimg {
       background-image: url('https://cdn.artphotolimited.com/images/62cfed37bd40b8b711cc54f1/1000x1000/miami.jpg');
       min-height: 100%;
@@ -26,59 +24,45 @@
       position: relative;
     }
 
-    .overlay {
+    .bgimg::before {
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.5);
+      background-color: rgba(0, 0, 0, 0.5); /* Capa oscura encima del fondo */
       z-index: 1;
+    }
+
+    .w3-display-container > * {
+      position: relative;
+      z-index: 2;
     }
 
     .seccion {
       display: none;
-      padding: 2em;
+      padding: 4em;
       background-color: rgba(0, 0, 0, 0.8);
       color: white;
     }
-
     .visible {
       display: block;
-      animation: fadeIn 0.7s ease-in;
     }
-
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
-    }
-
     .item img {
       cursor: pointer;
       transition: transform 0.3s;
       border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-      height: 120px;
-      object-fit: cover;
     }
-
-    .item h3 {
-      font-size: 16px;
-      margin-top: 8px;
+    .item img:hover {
+      transform: scale(1.05);
     }
-
-    .item {
-      text-align: center;
-    }
-
     .volver {
       margin-top: 2em;
     }
-
     .w3-card-4 {
       background-color: rgba(0, 0, 0, 0.8) !important;
     }
-
     .w3-text-white h1, .w3-text-white h2, .w3-text-white h3, .w3-text-white p {
       color: white;
     }
@@ -87,53 +71,63 @@
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="overlay"></div>
-
-  <div class="w3-display-topleft w3-padding-large w3-xlarge" style="position: relative; z-index: 2;">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
     <a href="miami2.html" target="_blank">Fama Miami</a>
   </div>
 
-  <div class="w3-display-middle" style="position: relative; z-index: 2;">
+  <div class="w3-display-middle">
     <div id="inicio" class="visible w3-center">
       <h1 class="w3-jumbo w3-animate-top">MIAMI CITY</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
       <p class="w3-large w3-center">La ciudad de lujo</p>
-      <div class="w3-row-padding w3-margin-top" style="max-width: 600px; margin: auto;">
+      <div class="w3-row-padding w3-margin-top">
         <div class="w3-third item">
           <img src="imagenes/miamibeach.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
-          <h3>Playas</h3>
+          <h3>Playas Increíbles</h3>
         </div>
         <div class="w3-third item">
           <img src="imagenes/Wynwood-5.jpg" style="width:100%" onclick="mostrarSeccion('arte')" alt="Arte y Cultura">
-          <h3>Arte</h3>
+          <h3>Arte y Cultura</h3>
         </div>
         <div class="w3-third item">
           <img src="imagenes/99.jpg" style="width:100%" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
-          <h3>Noche</h3>
+          <h3>Vida Nocturna</h3>
         </div>
       </div>
     </div>
 
     <div id="playa" class="seccion w3-container w3-card-4">
       <h2>Playas Increíbles</h2>
-      <p>South Beach, North Beach, Haulover, Sunny Isles y más.</p>
+      <p><strong>South Beach:</strong> La más famosa, con arena blanca, ambiente animado, bares y clubs.</p>
+      <p><strong>North Beach:</strong> Más tranquila, ideal para relajarse y familias.</p>
+      <p><strong>Haulover Beach:</strong> Tiene zona nudista y es buena para kiteboarding.</p>
+      <p><strong>Sunny Isles Beach:</strong> Playa familiar con aguas calmadas.</p>
+      <p><strong>Bill Baggs Cape Florida (Key Biscayne):</strong> Naturaleza, faro histórico y actividades al aire libre.</p>
       <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
     </div>
 
     <div id="arte" class="seccion w3-container w3-card-4">
       <h2>Arte y Cultura</h2>
-      <p>Wynwood Walls, Art Deco, museos y barrios con mucho arte.</p>
+      <p><strong>Wynwood Walls:</strong> Museo al aire libre con impresionantes murales de arte urbano y grafiti.</p>
+      <p><strong>Distrito Art Deco (Miami Beach):</strong> Arquitectura única de los años 20-30, con colores pastel y formas geométricas.</p>
+      <p><strong>Museo Pérez de Arte Contemporáneo (PAMM):</strong> Exhibe arte moderno y contemporáneo internacional.</p>
+      <p><strong>Calle Ocho (Little Havana):</strong> Centro cultural cubano con música, arte, comida tradicional y festivales.</p>
+      <p><strong>Miami Design District:</strong> Zona de tiendas de diseño, galerías de arte y esculturas públicas.</p>
       <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
     </div>
 
     <div id="noche" class="seccion w3-container w3-card-4">
       <h2>Vida Nocturna</h2>
-      <p>Discotecas, rooftops, fiestas latinas y festivales únicos.</p>
+      <p><strong>South Beach:</strong> El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.</p>
+      <p><strong>Calle Ocho (Little Havana):</strong> Fiestas con música latina, salsa y ambiente auténtico cubano.</p>
+      <p><strong>Eventos y festivales:</strong> Miami acoge eventos como el Ultra Music Festival, Art Basel y Miami Music Week.</p>
+      <p><strong>Bares en rooftops:</strong> Muchos hoteles tienen terrazas con vistas y ambiente para tomar copas al atardecer.</p>
+      <p><strong>Ambiente diverso:</strong> Desde fiestas electrónicas, salsa, reguetón, hasta lounge y bares tranquilos.</p>
       <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
     </div>
   </div>
 
-  <div class="w3-display-bottomleft w3-padding-large" style="position: relative; z-index: 2;">
+  <div class="w3-display-bottomleft w3-padding-large">
     <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
   </div>
 </div>
