--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     body, h1, h2, h3, p {
       font-family: "Raleway", sans-serif;
       color: white;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
     }
     body, html {
       height: 100%;
@@ -21,25 +20,19 @@
       min-height: 100%;
       background-position: center;
       background-size: cover;
-      position: relative;
     }
-
     .bgimg::before {
       content: "";
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5); /* Capa oscura encima del fondo */
-      z-index: 1;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.5); /* Capa oscura */
+      z-index: 0;
     }
-
     .w3-display-container > * {
       position: relative;
-      z-index: 2;
+      z-index: 1;
     }
-
     .seccion {
       display: none;
       padding: 4em;
@@ -75,12 +68,12 @@
     <a href="miami2.html" target="_blank">Fama Miami</a>
   </div>
 
-  <div class="w3-display-middle">
+  <div class="w3-display-middle" style="top: 30%;">
     <div id="inicio" class="visible w3-center">
       <h1 class="w3-jumbo w3-animate-top">MIAMI CITY</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
       <p class="w3-large w3-center">La ciudad de lujo</p>
-      <div class="w3-row-padding w3-margin-top">
+      <div class="w3-row-padding w3-margin-top" style="margin-top: 40px;">
         <div class="w3-third item">
           <img src="imagenes/miamibeach.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
           <h3>Playas Increíbles</h3>
