--- a/index.html
+++ b/index.html
@@ -7,56 +7,57 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <style>
-    body, h1, h2, h3, p {
-      font-family: "Raleway", sans-serif;
-      color: white;
-    }
     body, html {
       height: 100%;
       margin: 0;
+      font-family: "Raleway", sans-serif;
+      color: white;
     }
     .bgimg {
       background-image: url('https://cdn.artphotolimited.com/images/62cfed37bd40b8b711cc54f1/1000x1000/miami.jpg');
       min-height: 100%;
       background-position: center;
       background-size: cover;
+      position: relative;
     }
     .bgimg::before {
       content: "";
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.5); /* Capa oscura */
+      background-color: rgba(0, 0, 0, 0.5);
       z-index: 0;
     }
     .w3-display-container > * {
       position: relative;
       z-index: 1;
     }
-    .seccion {
-      display: none;
-      padding: 4em;
-      background-color: rgba(0, 0, 0, 0.8);
-      color: white;
-    }
-    .visible {
-      display: block;
+    .w3-display-middle {
+      top: 50% !important;
+      transform: translateY(-50%);
     }
     .item img {
       cursor: pointer;
       transition: transform 0.3s;
       border-radius: 10px;
+      width: 100%;
+      height: auto;
     }
     .item img:hover {
       transform: scale(1.05);
     }
-    .volver {
-      margin-top: 2em;
+    .seccion {
+      display: none;
+      padding: 4em;
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+    .visible {
+      display: block;
     }
     .w3-card-4 {
       background-color: rgba(0, 0, 0, 0.8) !important;
     }
-    .w3-text-white h1, .w3-text-white h2, .w3-text-white h3, .w3-text-white p {
+    h1, h2, h3, p {
       color: white;
     }
   </style>
@@ -68,22 +69,22 @@
     <a href="miami2.html" target="_blank">Fama Miami</a>
   </div>
 
-  <div class="w3-display-middle" style="top: 30%;">
+  <div class="w3-display-middle">
     <div id="inicio" class="visible w3-center">
-      <h1 class="w3-jumbo w3-animate-top">MIAMI CITY</h1>
+      <h1 class="w3-jumbo w3-animate-top" style="margin-bottom: 40px;">MIAMI CITY</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
-      <p class="w3-large w3-center">La ciudad de lujo</p>
+      <p class="w3-large">La ciudad de lujo</p>
       <div class="w3-row-padding w3-margin-top" style="margin-top: 40px;">
         <div class="w3-third item">
-          <img src="imagenes/miamibeach.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
+          <img src="imagenes/miamibeach.jpg" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
           <h3>Playas Increíbles</h3>
         </div>
         <div class="w3-third item">
-          <img src="imagenes/Wynwood-5.jpg" style="width:100%" onclick="mostrarSeccion('arte')" alt="Arte y Cultura">
+          <img src="imagenes/Wynwood-5.jpg" onclick="mostrarSeccion('arte')" alt="Arte y Cultura">
           <h3>Arte y Cultura</h3>
         </div>
         <div class="w3-third item">
-          <img src="imagenes/99.jpg" style="width:100%" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
+          <img src="imagenes/99.jpg" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
           <h3>Vida Nocturna</h3>
         </div>
       </div>
@@ -96,27 +97,26 @@
       <p><strong>Haulover Beach:</strong> Tiene zona nudista y es buena para kiteboarding.</p>
       <p><strong>Sunny Isles Beach:</strong> Playa familiar con aguas calmadas.</p>
       <p><strong>Bill Baggs Cape Florida (Key Biscayne):</strong> Naturaleza, faro histórico y actividades al aire libre.</p>
-      <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
+      <button class="w3-button w3-light-grey" onclick="volverInicio()">Volver al inicio</button>
     </div>
 
     <div id="arte" class="seccion w3-container w3-card-4">
       <h2>Arte y Cultura</h2>
       <p><strong>Wynwood Walls:</strong> Museo al aire libre con impresionantes murales de arte urbano y grafiti.</p>
-      <p><strong>Distrito Art Deco (Miami Beach):</strong> Arquitectura única de los años 20-30, con colores pastel y formas geométricas.</p>
-      <p><strong>Museo Pérez de Arte Contemporáneo (PAMM):</strong> Exhibe arte moderno y contemporáneo internacional.</p>
-      <p><strong>Calle Ocho (Little Havana):</strong> Centro cultural cubano con música, arte, comida tradicional y festivales.</p>
-      <p><strong>Miami Design District:</strong> Zona de tiendas de diseño, galerías de arte y esculturas públicas.</p>
-      <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
+      <p><strong>Distrito Art Deco:</strong> Arquitectura única de los años 20-30 con colores pastel.</p>
+      <p><strong>PAMM:</strong> Museo de arte contemporáneo de Miami.</p>
+      <p><strong>Little Havana:</strong> Zona cultural cubana llena de vida.</p>
+      <p><strong>Design District:</strong> Arte moderno, diseño y lujo.</p>
+      <button class="w3-button w3-light-grey" onclick="volverInicio()">Volver al inicio</button>
     </div>
 
     <div id="noche" class="seccion w3-container w3-card-4">
       <h2>Vida Nocturna</h2>
-      <p><strong>South Beach:</strong> El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.</p>
-      <p><strong>Calle Ocho (Little Havana):</strong> Fiestas con música latina, salsa y ambiente auténtico cubano.</p>
-      <p><strong>Eventos y festivales:</strong> Miami acoge eventos como el Ultra Music Festival, Art Basel y Miami Music Week.</p>
-      <p><strong>Bares en rooftops:</strong> Muchos hoteles tienen terrazas con vistas y ambiente para tomar copas al atardecer.</p>
-      <p><strong>Ambiente diverso:</strong> Desde fiestas electrónicas, salsa, reguetón, hasta lounge y bares tranquilos.</p>
-      <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
+      <p><strong>South Beach:</strong> Bares, clubs y ambiente festivo.</p>
+      <p><strong>Little Havana:</strong> Salsa, ritmos latinos y mojitos.</p>
+      <p><strong>Eventos:</strong> Ultra, Art Basel, fiestas en rooftops.</p>
+      <p><strong>Diversidad:</strong> De la electrónica a la salsa y reguetón.</p>
+      <button class="w3-button w3-light-grey" onclick="volverInicio()">Volver al inicio</button>
     </div>
   </div>
 
