--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       background-position: center;
       background-size: cover;
     }
+.bgimg::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0, 0, 0, 0.65); /* antes estaba en 0.5 */
+  z-index: 0;
+}
+
     .seccion {
       display: none;
       padding: 4em;
