--- a/index.html
+++ b/index.html
@@ -15,20 +15,28 @@
       height: 100%;
       margin: 0;
     }
+
     .bgimg {
       background-image: url('https://cdn.artphotolimited.com/images/62cfed37bd40b8b711cc54f1/1000x1000/miami.jpg');
       min-height: 100%;
       background-position: center;
       background-size: cover;
+      position: relative;
     }
-.bgimg::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background-color: rgba(0, 0, 0, 0.65); /* antes estaba en 0.5 */
-  z-index: 0;
-}
+
+    .bgimg::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.45); /* Menos oscuro */
+      z-index: 0;
+    }
+
+    .w3-display-container > * {
+      position: relative;
+      z-index: 1;
+    }
 
     .seccion {
       display: none;
@@ -36,25 +44,40 @@
       background-color: rgba(0, 0, 0, 0.8);
       color: white;
     }
+
     .visible {
       display: block;
     }
+
     .item img {
       cursor: pointer;
       transition: transform 0.3s;
       border-radius: 10px;
     }
+
     .item img:hover {
       transform: scale(1.05);
     }
+
     .volver {
       margin-top: 2em;
     }
+
     .w3-card-4 {
       background-color: rgba(0, 0, 0, 0.8) !important;
     }
+
     .w3-text-white h1, .w3-text-white h2, .w3-text-white h3, .w3-text-white p {
       color: white;
+    }
+
+    .w3-row-padding .w3-third {
+      padding: 8px;
+    }
+
+    .w3-row-padding h3 {
+      text-align: center;
+      margin-top: 0.5em;
     }
   </style>
 </head>
@@ -118,7 +141,7 @@
   </div>
 
   <div class="w3-display-bottomleft w3-padding-large">
-  <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
+    <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
   </div>
 </div>
 
