--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
   <div class="w3-display-bottomleft w3-padding-large">
   <a href="https://www.w3schools.com/w3css/tryw3css_templates_coming_soon.htm" target="_blank">Plantilla</a>
+ Publico destinatario: Todo público.
   </div>
 </div>
 
