--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    <a href="miami2.html" target="_blank">Fama Miami</a>
+    <a href="miami2.html" target="_blank">jjj Fama Miami</a>
   </div>
 
   <div class="w3-display-middle">
@@ -73,15 +73,15 @@
       <div class="w3-row-padding w3-margin-top">
         <div class="w3-third item">
           <img src="imagenes/miamibeach.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
-          <h3>Playas Increíbles</h3>
+          <h3>jjj Playas Increíbles</h3>
         </div>
         <div class="w3-third item">
           <img src="imagenes/Wynwood-5.jpg" style="width:100%" onclick="mostrarSeccion('arte')" alt="Arte y Cultura">
-          <h3>Arte y Cultura</h3>
+          <h3>jjj Arte y Cultura</h3>
         </div>
         <div class="w3-third item">
           <img src="imagenes/99.jpg" style="width:100%" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
-          <h3>Vida Nocturna</h3>
+          <h3>jjj Vida Nocturna</h3>
         </div>
       </div>
     </div>
